# sparrow

./: .gitattributes  CMakeLists.txt
dev/: common.h  sparrow.h
lib/: lcg_random.sp  random.sp
lib/dylib/std/cfile/: CMakeLists.txt
lib/dylib/std/cfile/include/: libsprcfile.h
lib/dylib/std/cfile/src/: main.c
lib/dylib/std/math/: CMakeLists.txt
lib/dylib/std/math/include/: libsprmath.h
lib/dylib/std/math/src/: main.c
lib/std/: file.sp  math.sp  random.sp
lib/std/collection/: binary_sort_tree.sp
src/ast/: ast.c  ast.h  ast_printer.c  ast_printer.h
src/cli/: cli.c
src/compiler/: ast_compiler.c  ast_compiler.h  compiler.c  compiler.h  one_pass_compiler.c  one_pass_compiler.h
src/disassemble/: disassemble.c  disassemble.h
src/gc/: gc.c  gc.h
src/include/: common.h  utf8.c  utf8.h  utils.c  utils.h
src/object/: class.c  class.h  header_obj.c  header_obj.h  meta_obj.c  meta_obj.h  obj_fn.c  obj_fn.h  obj_list.c  obj_list.h  obj_map.c  obj_map.h  obj_native_pointer.c  obj_native_pointer.h  obj_range.c  obj_range.h  obj_string.c  obj_string.h  obj_thread.c  obj_thread.h
src/parser/: parser.c  parser.h
src/vm/: core.c  core.h  core.script.inc  opcode.h  opcode.inc  vm.c  vm.h
test/: bug5_func_res_typping.sp  bugfix_issue5.sp  bugfix_issue7.sp  test.sh  test_auto_property_constructor.sp  test_benchmark.sp  test_chain_call.sp  test_comment.sp  test_compound_assign_op.sp  test_constant.sp  test_getter_and_setter.sp  test_interpolation.sp  test_loop_syntax.sp  test_native_function_annotation.sp  test_native_pointer.sp
